--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                           <h3 class="home__education">Frontend Developer || Digital Marketer</h3>
 
                           <div class="home__buttons">
-                              <a href="#" class="button button-ghost">  Download CV</a>
+                              <a href="https://docdro.id/RIr9IXi" class="button button-ghost">  Download CV</a>
                             <a href="#about" class="button">About Me</a>
                           </div>
                       </div>
